# GildedRose_12

./: README.md
cpp/: CMakeLists.txt
cpp/include/: AgedBrieItem.h  BackstagePassItem.h  FoodBeverageItem.h  GildedRose.h  GildedRoseItem.h  Item.h  NormalItem.h  SulfurasItem.h
cpp/src/: GildedRose.cpp
cpp/test/: ApprovalTest.PrintTextFixture.approved.txt  ApprovalTest.cpp  FoodBeverageTest.cpp  GildedRoseTest.cpp
